# Keys

./: .env.example  .gitignore  .secrets.baseline  AAAA_GRADE_COMPLETE.md  ACCESS_MAP.md  ACTION_CHECKLIST.md  AGENTS_keys.md  ALL_PHASES_COMPLETE.md  API_BASE_URL_EXPLANATION.md  AUTOMATION_SUMMARY.md  BACKEND_CONTRACT_VALIDATION_REPORT.md  BACKGROUND_EVENT_LOOP.md  CATALOG.md  CHANGELOG.md  CI_CD_SETUP.md  COMPETITOR_COMPARISON_TABLE.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEFENSIVE_MOAT_ANALYSIS.md  DEFENSIVE_MOAT_EXECUTIVE_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_ROADMAP.md  ECONOMIC_HARDENING_ALL_COMPLETE.md  ECONOMIC_HARDENING_COMPLETE.md  ECONOMIC_HARDENING_EXECUTIVE_SUMMARY.md  ECONOMIC_HARDENING_IMPLEMENTATION_CHECKLIST.md  ECONOMIC_HARDENING_IMPLEMENTATION_COMPLETE.md  ECONOMIC_HARDENING_PLAN.md  ENV_VARS.md  EXECUTION_HARDENING_AUDIT_REPORT.md  FINAL_STATUS.md  GITHUB_SECRETS_CHECKLIST.md  GTM_STRATEGY.md  HOW_TO_CREATE_PR.md  IMPLEMENTATION_REPORT.md  KPI_COMPARISON_REPORT.md  LAUNCH_PRESSURE_AUDIT.md  (+49 more)
.github/: QUICK_REFERENCE.md  dependabot.yml  labeler.yml
.pr/: AGENT_PR_NOTES.md
backend/: .eslintrc.json  README.md  package.json  tsconfig.json  vitest.config.ts
chrome-extension/: auth.js  background.js  popup-auth.js
contracts/: artifact_metadata.schema.json  validation_report.schema.json
crates/keys-validate/: Cargo.toml
crates/keys-validate/src/: lib.rs  main.rs
crates/keys-validate/tests/: golden.rs
crates/keys-validate/tests/fixtures/: expected_report.json  expected_report.txt
(+885 files in other folders)
