[package]
name = "keys-validate"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
jsonschema = { version = "0.17.1", features = ["draft202012"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.16"
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
